side navi z-index fixed

--- a/src/public/scss/_header.scss
+++ b/src/public/scss/_header.scss
@@ -530,6 +530,7 @@
       .visible {
         display: flex;
         justify-content: flex-end;
+        z-index: 3;
       }
     }
   }
